@@ -97,11 +97,11 @@ require 'lobbyist/v2/enterprise_user'
 require 'lobbyist/v2/enterprise'
 require 'lobbyist/v2/handwritten_review_metrics'
 require 'lobbyist/v2/handwritten_review'
-require 'lobbyist/v2/kiosk_review'
 require 'lobbyist/v2/private_feedback_topic'
 require 'lobbyist/v2/promo'
 require 'lobbyist/v2/review_challenge'
 require 'lobbyist/v2/review_comment'
+require 'lobbyist/v2/review_confirmation'
 require 'lobbyist/v2/review_metrics'
 require 'lobbyist/v2/review_topic'
 require 'lobbyist/v2/review_withdrawal_request'
